Your commit message here

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,12 @@
             </select>
             <input type="text" id="customLabelInput" placeholder="Enter custom label" style="display: none;">
         </div>
+
+        <div class="export-section">
+    <h2>Export Annotations</h2>
+    <button id="exportButton">Export Annotations</button>
+</div>
+
     </div>
 
     <script src="script.js"></script>
